--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="go_back">Go Back</string>
     <string name="go_to_3">Go to Activity 3</string>
     <string name="go_to_2">Go to Activity 2</string>
+    <string name="banner_title">Trip Planner</string>
 </resources>
