Add navigation menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">ThemesMenus</string>
+    <string name="nav_open">Open</string>
+    <string name="nav_close">Close</string>
     <string name="title_activity_2">Activity2</string>
     <string name="activity2">Activity 2</string>
     <string name="activity3">Activity 3</string>
