Implement Trip List and Detail View
- Created `TripListAdapter` to display trip information in a list.
- Created `TripListActivity` to show a list of trips and navigate to trip details.
- Created `TripDetailActivity` to display detailed information for a selected trip.
- Added new layouts: `activity_trip_list.xml`, `activity_trip_detail.xml`, `trip_list_item.xml`.
- Added strings for trip list and detail activities.
- Implemented `getAllTripInfo` method in `TripInfoDao`.
- Updated `MainActivity` to navigate to `TripListActivity`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="title_activity_2">Add New Trip</string>
     <string name="activity2">Activity 2</string>
     <string name="activity3">Activity 3</string>
+    <string name="trip_list_activity">Trip List Activity</string>
+    <string name="trip_details_activity">Trip Details Activity</string>
     <string name="title_activity_3">Activity3</string>
     <string name="go_back">Back</string>
     <string name="go_to_3">Travel Assist</string>
